XWIKI-22125: The UI should be clearer about finished attachment uploads * Fixed spacing around the icon when using Silk

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/widgets/upload.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/widgets/upload.css
@@ -25,7 +25,7 @@
 }
 
 /* We expect the first node child of the .result-<something> node to be its icon. */
-.upload-result > div > span:first-child {
+.upload-result > div > *:first-child {
   margin-right: 1em;
 }
 
